--- a/1.vue/htmlback/14.prevent.html
+++ b/1.vue/htmlback/14.prevent.html
@@ -12,7 +12,7 @@
         <from v-on:submit.prevent = "handleSubmit">
             <label>用户名</label>
             <input/>
-            <input tyepe = "submit"/>
+            <input type = "submit"/>
         </from>
        
         
