--- a/vue(shangguigu）/vue-basic/11_条件渲染/条件渲染.html
+++ b/vue(shangguigu）/vue-basic/11_条件渲染/条件渲染.html
@@ -8,13 +8,14 @@
 	<body>
 		<div id="root">
 			<h2>当前的n值是:{{n}}</h2>
+			<!-- 表达式n++ -->
 			<button @click="n++">点我n+1</button>
-			<!-- 使用v-show做条件渲染 -->
 			<!--一般切换频率高的话就用v-show -->
 			<h2 v-show="false">欢迎来到{{name}}</h2>
 			<h2 v-show="1 === 1">欢迎来到{{name}}</h2>
 
 			<!-- 一般切换频率低的话就用 v-if -->
+			<!-- 经常频繁的增删节点会面临效率的问题 -->
 			<!-- 使用v-if做条件渲染 -->
 			<h2 v-if="false">欢迎来到{{name}}</h2>
 			<h2 v-if="1 === 1">欢迎来到{{name}}</h2>
