--- a/vue(shangguigu）/vue-basic/12_列表渲染/1.基本列表.html
+++ b/vue(shangguigu）/vue-basic/12_列表渲染/1.基本列表.html
@@ -7,7 +7,6 @@
 	</head>
 	<body>
 		<div id="root">
-			<!-- 遍历数组 -->
 			<h2>人员列表（遍历数组）</h2>
 			<ul>
 				<li v-for="(p,index) of persons" :key="index">
@@ -15,7 +14,6 @@
 				</li>
 			</ul>
 
-			<!-- 遍历对象 -->
 			<h2>汽车信息（遍历对象）</h2>
 			<ul>
 				<li v-for="(value,k) of car" :key="k">
@@ -23,17 +21,14 @@
 				</li>
 			</ul>
 
-			<!-- 遍历字符串 -->
-			<!-- 遍历里面少了一个属性 key -->
-			<h2>测试遍历字符串（用得少）</h2>
+			<h2>测试遍历字符串</h2>
 			<ul>
 				<li v-for="(char,index) of str" :key="index">
 					{{char}}-{{index}}
 				</li>
 			</ul>
 			
-			<!-- 遍历指定次数 -->
-			<h2>测试遍历指定次数（用得少）</h2>
+			<h2>测试遍历指定次数</h2>
 			<ul>
 				<li v-for="(number,index) of 5" :key="index">
 					{{index}}-{{number}}
