--- a/vue(shangguigu）/vue-basic/12_列表渲染/3.列表过滤.html
+++ b/vue(shangguigu）/vue-basic/12_列表渲染/3.列表过滤.html
@@ -6,7 +6,6 @@
 		<script type="text/javascript" src="../js/vue.js"></script>
 	</head>
 	<body>
-		<!-- 准备好一个容器-->
 		<div id="root">
 			<h2>人员列表</h2>
 			<input type="text" placeholder="请输入名字" v-model="keyWord">
@@ -20,33 +19,35 @@
 		<script type="text/javascript">
 			Vue.config.productionTip = false
 			
-			//用watch实现
-			//#region 
-			/* new Vue({
-				el:'#root',
-				data:{
-					keyWord:'',
-					persons:[
-						{id:'001',name:'马冬梅',age:19,sex:'女'},
-						{id:'002',name:'周冬雨',age:20,sex:'女'},
-						{id:'003',name:'周杰伦',age:21,sex:'男'},
-						{id:'004',name:'温兆伦',age:22,sex:'男'}
-					],
-					filPerons:[]
-				},
-				watch:{
-					keyWord:{
-						immediate:true,
-						handler(val){
-							this.filPerons = this.persons.filter((p)=>{
-								return p.name.indexOf(val) !== -1
-							})
-						}
-					}
-				}
-			}) */
+		    //用watch实现
+			//#region
+			//  new Vue({
+			// 	el:'#root',
+			// 	data:{
+			// 		keyWord:'',
+			// 		persons:[
+			// 			{id:'001',name:'马冬梅',age:19,sex:'女'},
+			// 			{id:'002',name:'周冬雨',age:20,sex:'女'},
+			// 			{id:'003',name:'周杰伦',age:21,sex:'男'},
+			// 			{id:'004',name:'温兆伦',age:22,sex:'男'}
+			// 		],
+			// 		filPerons:[]
+			// 	},
+			// 	watch:{
+			// 		keyWord:{
+			// 			//加了一个immediate属性，表示一开始就执行一次handler函数，正好所有字符串都包含空串' '
+			// 			immediate:true,
+			// 			handler(val){
+			// 				this.filPerons = this.persons.filter((p)=>{
+			// 					return p.name.indexOf(val) !== -1
+			// 				})
+			// 			}
+			// 		}
+			// 	}
+			// }) 
 			//#endregion
 			
+			//当watch和computed都能实现某个功能时，优先考虑computed，因为computed更简洁
 			//用computed实现
 			new Vue({
 				el:'#root',
@@ -59,6 +60,7 @@
 						{id:'004',name:'温兆伦',age:22,sex:'男'}
 					]
 				},
+				//计算属性是靠返回值决定东西的
 				computed:{
 					filPerons(){
 						return this.persons.filter((p)=>{
