--- a/vue(shangguigu）/vue-basic/12_列表渲染/7.模拟一个数据监测.html
+++ b/vue(shangguigu）/vue-basic/12_列表渲染/7.模拟一个数据监测.html
@@ -12,11 +12,9 @@
 				address:'北京',
 			}
 
-			//创建一个监视的实例对象，用于监视data中属性的变化
 			const obs = new Observer(data)		
 			console.log(obs)	
 
-			//准备一个vm实例对象
 			let vm = {}
 			vm._data = data = obs
 
@@ -30,16 +28,12 @@
 							return obj[k]
 						},
 						set(val){
-							console.log(`${k}被改了，我要去解析模板，生成虚拟DOM.....我要开始忙了`)
+							console.log(`${k}被改了，我要去解析模板，生成虚拟DOM.....`)
 							obj[k] = val
 						}
 					})
 				})
 			}
-			
-			
-
-
 		</script>
 	</body>
 </html>
