--- a/vue(shangguigu）/vue-basic/12_列表渲染/8.Vue.set的使用.html
+++ b/vue(shangguigu）/vue-basic/12_列表渲染/8.Vue.set的使用.html
@@ -3,11 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Vue监测数据改变的原理</title>
-		<!-- 引入Vue -->
 		<script type="text/javascript" src="../js/vue.js"></script>
 	</head>
 	<body>
-		<!-- 准备好一个容器-->
 		<div id="root">
 			<h1>学校信息</h1>
 			<h2>学校名称：{{school.name}}</h2>
@@ -29,7 +27,7 @@
 	</body>
 
 	<script type="text/javascript">
-		Vue.config.productionTip = false //阻止 vue 在启动时生成生产提示。
+		Vue.config.productionTip = false 
 
 		const vm = new Vue({
 			el:'#root',
