--- a/vue(shangguigu）/vue-basic/13_收集表单数据/收集表单数据.html
+++ b/vue(shangguigu）/vue-basic/13_收集表单数据/收集表单数据.html
@@ -6,35 +6,26 @@
 		<script type="text/javascript" src="../js/vue.js"></script>
 	</head>
 	<body>
-		<!-- 
-			收集表单数据：
-					若：<input type="text"/>，则v-model收集的是value值，用户输入的就是value值。
-					若：<input type="radio"/>，则v-model收集的是value值，且要给标签配置value值。
-					若：<input type="checkbox"/>
-							1.没有配置input的value属性，那么收集的就是checked（勾选 or 未勾选，是布尔值）
-							2.配置input的value属性:
-									(1)v-model的初始值是非数组，那么收集的就是checked（勾选 or 未勾选，是布尔值）
-									(2)v-model的初始值是数组，那么收集的的就是value组成的数组
-					备注：v-model的三个修饰符：
-									lazy：失去焦点再收集数据
-									number：输入字符串转为有效的数字
-									trim：输入首尾空格过滤
-		-->
-		<!-- 准备好一个容器-->
 		<div id="root">
 			<form @submit.prevent="demo">
 				账号：<input type="text" v-model.trim="userInfo.account"> <br/><br/>
-				密码：<input type="password" v-model="userInfo.password"> <br/><br/>
+				密码：<input type="password" v-model.trim="userInfo.password"> <br/><br/>
+				<!-- 一般输入框会认为你输入的就是字符，v-model.number：输入字符串转为有效的数字 -->
 				年龄：<input type="number" v-model.number="userInfo.age"> <br/><br/>
 				性别：
+				<!-- radio:单选框--> 
+				<!--男或女 true或false  -->
 				男<input type="radio" name="sex" v-model="userInfo.sex" value="male">
 				女<input type="radio" name="sex" v-model="userInfo.sex" value="female"> <br/><br/>
 				爱好：
+				<!-- checkbox:复选框 -->
 				学习<input type="checkbox" v-model="userInfo.hobby" value="study">
 				打游戏<input type="checkbox" v-model="userInfo.hobby" value="game">
 				吃饭<input type="checkbox" v-model="userInfo.hobby" value="eat">
 				<br/><br/>
 				所属校区
+				<!-- select下拉列表 -->
+				<!-- option:选项 -->
 				<select v-model="userInfo.city">
 					<option value="">请选择校区</option>
 					<option value="beijing">北京</option>
@@ -44,9 +35,18 @@
 				</select>
 				<br/><br/>
 				其他信息：
+				
+				<!-- textarea:多行文本域 -->
+				<!-- v-model的三个修饰符：
+				lazy：失去焦点再收集数据
+				number：输入字符串转为有效的数字
+				trim：输入首尾空格过滤 -->
+				<!-- v-model.lazy,不是实时的收集，而是失去焦点再收集 -->
 				<textarea v-model.lazy="userInfo.other"></textarea> <br/><br/>
-				<input type="checkbox" v-model="userInfo.agree">阅读并接受<a href="http://www.atguigu.com">《用户协议》</a>
+				<!-- 这个只要管是否同意就是boolean值 -->
+				<input type="checkbox" v-model="userInfo.agree">阅读并接受<a href="http://www.baidu.com">《用户协议》</a>
 				<button>提交</button>
+				<!-- 阻止默认提交行为 -->
 			</form>
 		</div>
 	</body>
@@ -57,6 +57,7 @@
 		new Vue({
 			el:'#root',
 			data:{
+				// 输入框会认为你输入的就是字符，v-model.number：输入字符串转为有效的数字
 				userInfo:{
 					account:'',
 					password:'',
@@ -70,6 +71,7 @@
 			},
 			methods: {
 				demo(){
+				// JSON.stringify():将对象转换为JSON格式的字符串
 					console.log(JSON.stringify(this.userInfo))
 				}
 			}
