--- a/vue(shangguigu）/vue-basic/14_过滤器/过滤器.html
+++ b/vue(shangguigu）/vue-basic/14_过滤器/过滤器.html
@@ -7,27 +7,19 @@
 		<script type="text/javascript" src="../js/dayjs.min.js"></script>
 	</head>
 	<body>
-		<!-- 
-			过滤器：
-				定义：对要显示的数据进行特定格式化后再显示（适用于一些简单逻辑的处理）。
-				语法：
-						1.注册过滤器：Vue.filter(name,callback) 或 new Vue{filters:{}}
-						2.使用过滤器：{{ xxx | 过滤器名}}  或  v-bind:属性 = "xxx | 过滤器名"
-				备注：
-						1.过滤器也可以接收额外参数、多个过滤器也可以串联
-						2.并没有改变原本的数据, 是产生新的对应的数据
-		-->
-		<!-- 准备好一个容器-->
 		<div id="root">
 			<h2>显示格式化后的时间</h2>
-			<!-- 计算属性实现 -->
+			<!-- 计算属性实现（修正后匹配计算属性名） -->
+		    <!-- formatTime -->
 			<h3>现在是：{{fmtTime}}</h3>
 			<!-- methods实现 -->
 			<h3>现在是：{{getFmtTime()}}</h3>
 			<!-- 过滤器实现 -->
 			<h3>现在是：{{time | timeFormater}}</h3>
-			<!-- 过滤器实现（传参） -->
+			<!-- 过滤器实现（传参 + 串联） -->
 			<h3>现在是：{{time | timeFormater('YYYY_MM_DD') | mySlice}}</h3>
+			<!-- 过滤器代码本身没问题，只是用错了位置 —— 想改文本却把过滤器写在了属性绑定里，
+			所以页面文本没变化，但属性其实已经被修改了。 -->
 			<h3 :x="msg | mySlice">尚硅谷</h3>
 		</div>
 
@@ -40,16 +32,19 @@
 		Vue.config.productionTip = false
 		//全局过滤器
 		Vue.filter('mySlice',function(value){
+			// 增加空值判断，提升健壮性
+			if(!value) return ''
 			return value.slice(0,4)
 		})
 		
 		new Vue({
 			el:'#root',
 			data:{
-				time:1621561377603, //时间戳
-				msg:'你好，尚硅谷'
+				time:1767275227345, //时间戳
+				msg:'你好，梁森瑞！'
 			},
 			computed: {
+				// 计算属性名与模板中的{{fmtTime}}匹配
 				fmtTime(){
 					return dayjs(this.time).format('YYYY年MM月DD日 HH:mm:ss')
 				}
@@ -62,12 +57,13 @@
 			//局部过滤器
 			filters:{
 				timeFormater(value,str='YYYY年MM月DD日 HH:mm:ss'){
-					// console.log('@',value)
+					if(!value) return ''
 					return dayjs(value).format(str)
 				}
 			}
 		})
 
+		// 取消注释，让root2的Vue实例生效
 		new Vue({
 			el:'#root2',
 			data:{
