--- a/vue(shangguigu）/vue-basic/11_条件渲染/条件渲染.html
+++ b/vue(shangguigu）/vue-basic/11_条件渲染/条件渲染.html
@@ -27,8 +27,10 @@
 			<div v-else-if="n === 3">Vue</div>
 			<div v-else>哈哈</div>
 
-			<!-- v-if与template的配合使用 -->
-			<!-- template不影响结构  -->
+		   <!-- 代码整体功能总结
+           这段 Vue 模板代码的作用是：当数据n的值等于1时，同时显示<h2>你好</h2>、<h2>尚硅谷</h2>、
+		   <h2>北京</h2>这三个标题；当n不等于1时，这三个标题全部隐藏。关键是用<template>包裹多个元素
+		   ，不会在页面 DOM 中生成多余的标签。 -->
 			<template v-if="n === 1">
 				<h2>你好</h2>
 				<h2>尚硅谷</h2>
