--- a/vue(shangguigu）/vue-basic/17_生命周期/2.分析生命周期.html
+++ b/vue(shangguigu）/vue-basic/17_生命周期/2.分析生命周期.html
@@ -47,6 +47,7 @@
 			},
 			beforeCreate() {
 				console.log('beforeCreate')
+				console.log(this);
 			},
 			created() {
 				console.log('created')
