--- a/vue(shangguigu）/vue-basic/17_生命周期/3.总结生命周期.html
+++ b/vue(shangguigu）/vue-basic/17_生命周期/3.总结生命周期.html
@@ -3,21 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>引出生命周期</title>
-		<!-- 引入Vue -->
 		<script type="text/javascript" src="../js/vue.js"></script>
 	</head>
 	<body>
-		<!-- 
-				常用的生命周期钩子：
-						1.mounted: 发送ajax请求、启动定时器、绑定自定义事件、订阅消息等【初始化操作】。
-						2.beforeDestroy: 清除定时器、解绑自定义事件、取消订阅消息等【收尾工作】。
-
-				关于销毁Vue实例
-						1.销毁后借助Vue开发者工具看不到任何信息。
-						2.销毁后自定义事件会失效，但原生DOM事件依然有效。
-						3.一般不会在beforeDestroy操作数据，因为即便操作数据，也不会再触发更新流程了。
-		-->
-		<!-- 准备好一个容器-->
 		<div id="root">
 			<h2 :style="{opacity}">欢迎学习Vue</h2>
 			<button @click="opacity = 1">透明度设置为1</button>
@@ -35,6 +23,7 @@
 			},
 			methods: {
 				stop(){
+					//直接把vm给干掉了，但是定时器它不知道
 					this.$destroy()
 				}
 			},
@@ -42,14 +31,15 @@
 			mounted(){
 				console.log('mounted',this)
 				this.timer = setInterval(() => {
-					console.log('setInterval')
 					this.opacity -= 0.01
 					if(this.opacity <= 0) this.opacity = 1
 				},16)
 			},
+			//在它自杀之前将timer给清除掉
+			//这样写的好处是不管它是自杀还是他杀，定时器都能被清除掉
 			beforeDestroy() {
-				clearInterval(this.timer)
 				console.log('vm即将驾鹤西游了')
+				clearInterval(this.timer)
 			},
 		})
 
