--- a/vue(shangguigu）/vue-basic/18_非单文件组件/3.组件的嵌套.html
+++ b/vue(shangguigu）/vue-basic/18_非单文件组件/3.组件的嵌套.html
@@ -3,19 +3,16 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>组件的嵌套</title>
-		<!-- 引入Vue -->
 		<script type="text/javascript" src="../js/vue.js"></script>
 	</head>
 	<body>
-		<!-- 准备好一个容器-->
 		<div id="root">
 			
 		</div>
 	</body>
 
 	<script type="text/javascript">
-		Vue.config.productionTip = false //阻止 vue 在启动时生成生产提示。
-
+		Vue.config.productionTip = false 
 		//定义student组件
 		const student = Vue.extend({
 			name:'student',
