--- a/vue(shangguigu）/vue-basic/18_非单文件组件/5.一个重要的内置关系.html
+++ b/vue(shangguigu）/vue-basic/18_非单文件组件/5.一个重要的内置关系.html
@@ -3,15 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>一个重要的内置关系</title>
-		<!-- 引入Vue -->
 		<script type="text/javascript" src="../js/vue.js"></script>
 	</head>
 	<body>
-		<!-- 
-				1.一个重要的内置关系：VueComponent.prototype.__proto__ === Vue.prototype
-				2.为什么要有这个关系：让组件实例对象（vc）可以访问到 Vue原型上的属性、方法。
-		-->
-		<!-- 准备好一个容器-->
 		<div id="root">
 			<school></school>
 		</div>
@@ -20,6 +14,11 @@
 	<script type="text/javascript">
 		Vue.config.productionTip = false //阻止 vue 在启动时生成生产提示。
 		Vue.prototype.x = 99
+		console.dir(Vue);
+
+		// 函数里面的prototype(显式原型属性)
+        // 对象里面的__proto__(隐式原型属性)
+        // 这只是对属性的一个修饰，最终的原型对象只有一个
 
 		//定义school组件
 		const school = Vue.extend({
